homepage.css
#title {
    font-size: 30px;
    text-align: center;
    margin: 1em;
    padding:0px 0px 0px 0px; 
    color:black;
}

::selection {
    color: none;
    background: none;
}

body{
    /*background-image:url("/assets/woodbackground.jpg");*/
    margin: 0;
}

h2 {
    color:black;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 20px;
}

#computerCards, #playerCards {
    position:relative;
    display:grid;
    grid-template-columns: repeat(6, 120px);
    grid-template-rows: 140px;
    justify-content: center;
    align-items: center;    
    gap:25px;
}

#centerCards {
    margin: 50px;
    display:grid;
    grid-template-columns: repeat(4, 120px);
    grid-template-rows: 140px;
    justify-content: center;
    align-items: center;
    gap:25px;
}

.cards {
    position:relative;
    height:100%;
    width:100%;
    border: 1px solid black;
    background-color:white;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.cards .red {
    color:red;
}

.cards .black{
    color:black;
}

.computerHand, .playerHand, .center{
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 50px;
    height: 100%;
    width: 70%;
}

.cards::before, .cards::after {
    position:absolute;
    content: attr(data-value);
    font-size: 15px;
}

.cards::before{
    top: .5em;
    left: .5em;
}

.cards::after{
    bottom: 5px;
    right: 5px;
    transform:rotate(180deg);
}

body .stack{
    display: flex;
    justify-content: center;
    align-items:center;
    font-size: 50px;
    color:white;
    background: black;
    height: 100%;
    width: 70%;
}

#playerCards{
    
}

.playerHand{
    height:140px;
    width:85px;
    cursor: move;
    position:absolute;
}

